
        - Fixed FIND command for enhanced compatibility with cmd.exe.

        - Fixed manual pages.

        - Fixed some typos.

MONDAY 24TH, APRIL

        - Fixed errors in unicode file searching function and functions.

        - Fixed find to make it faster using file buffering potential.

        - Fixed the set command.

FRIDAY 5TH, MAY

        - Added support for concatenation using '+' with the the COPY command.

        - Added better support of variable trucating using numbers when Dos9 
          is explicitely compiled to deal with utf-8.

        - Fixed error messages and help messages.

        - Fixed manual pages.

FRIDAY 25TH, MAY

        - Fixed lots of little bugs

        - Fixed handling of stdin with the commands (especially resetting the 
          file flags after exit).

        - Fixed DEL and RMDIR.

        - Fixed File search functions.

        - Changed behaviour of the /C and /K switches.

        - Added support of more than 10 arguments through the use of the shift 
          command and the %+ variable.

        - Added WC command.

        - Added XARGS command.

        - Fixed man pages and i18n messages.

TUESDAY 30TH, MAY

        - Fixed dir search function for non-unicode and unicode versions.

        - Fixed pseudo-directory bug with if exist.

        - Fixed rmdir bug.

        - Fixed start bug.

        - Fixed call bug.

FRIDAY 2ND, JUNE

        - Fixed extra newline bug after echo off.

        - Fixed errors with pipes.

        - Fixed rename and del command.

        - Fixed copy command.

        - Fixed file search bug for vanilla functions under windows.

FRIDAY 21ST, JULY

        - Heavily modified the interpretor that no uses threads instead of of 
          separated processes.

        - Fix of the set command.

        - Lots of bugfixes.

SUNDAY 3RD, DECEMBER

        - Fixes for path name handling in Dos9_GetMatchFileList 

        - Added semaphores to fix SET command. 
