@@ -1774,3 +1774,7 @@ ${for %%a in (*.exe) do echo %%a}
 	- Fixes for path name handling in Dos9_GetMatchFileList 
 
 	- Added semaphores to fix SET command.
+	
+{{Sunday 1st April, 2018}}
+
+	- Added fixes for Dos9_EsToFullPath().
